--- a/src/email.html
+++ b/src/email.html
@@ -1,7 +1,7 @@
 <table border='0' cellpadding='0' cellspacing='0' style='table-layout: fixed; max-width: 900px; padding: 0 94px; margin: 0; font-family: Arial, sans-serif; background: url("")  #000 no-repeat center;'>
   <tr>
     <td style='text-align: center; padding: 66px 0 63px;'>
-      <img src='https://img.utdstc.com/icon/26e/fb0/26efb07292abf41a489cb9a9ca56230edfa7dcdda7e43cb934e9e0d5c3eb136c:200' width='133' alt="tgc logo">
+      <img src='https://img.utdstc.com/icon/26e/fb0/26efb07292abf41a489cb9a9ca56230edfa7dcdda7e43cb934e9e0d5c3eb136c:200' width='133' alt='tgc logo'>
     </td>
   </tr>
   <tr>
@@ -17,18 +17,18 @@
 	<td>
 	<table style='width: 100%' border='0' cellpadding='0' cellspacing='0'>
 	  <tr>
-		<td style="width:30%"></td>
-		<td style="width:15%; width: 15%; background: #B2212B; border-radius: 20px 0 0 20px; padding: 3px 23px 3px 26px; box-sizing: border-box;" rowspan='2'>
-			<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Gold_Cup_icon.svg/1200px-Gold_Cup_icon.svg.png' width='64' height='81' alt="tgc logo"> 
+		<td style='width:30%'></td>
+		<td style='width:15%; width: 15%; background: #B2212B; border-radius: 20px 0 0 20px; padding: 3px 23px 3px 26px; box-sizing: border-box;' rowspan='2'>
+			<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Gold_Cup_icon.svg/1200px-Gold_Cup_icon.svg.png' width='64' height='81' alt='tgc logo'> 
 		</td>
-		<td style="width:25%; padding-top: 15px; background: #B2212B; font-size: 44px; line-height: 54px; color: #fff; border-top-right-radius: 20px; font-weight: 600; font-style: italic;">$1600</td>
-		<td style="width:30%"></td>
+		<td style='width:25%; padding-top: 15px; background: #B2212B; font-size: 44px; line-height: 54px; color: #fff; border-top-right-radius: 20px; font-weight: 600; font-style: italic;'>$1600</td>
+		<td style='width:30%'></td>
 	  </tr>
 	  <tr>
-	   <td style="width:20%"></td>
-		<td style="width:30%; color: #fff; background: #B2212B; padding-bottom: 14px; border-bottom-right-radius: 20px; font-weight: 600; font-style: italic;">$25/Person Entry Fee</td>
-		<td style="width:30%"></td>
-		 <td style="width:20%"></td>
+	   <td style='width:20%'></td>
+		<td style='width:30%; color: #fff; background: #B2212B; padding-bottom: 14px; border-bottom-right-radius: 20px; font-weight: 600; font-style: italic;'>$25/Person Entry Fee</td>
+		<td style='width:30%'></td>
+		 <td style='width:20%'></td>
 	  </tr>
 	</table>
 	</td>
@@ -43,4 +43,122 @@
     </td>
   </tr>
 </table>
-
+<table border='0' cellpadding='0' cellspacing='0' style='width: 900px; table-layout: fixed; max-width: 900px; padding: 14px 78px; margin: 0; font-family: Arial, sans-serif; background: #202020; border-bottom: 1px solid #353535;'>
+    <tr>
+        <td style='padding-bottom: 20px;'>
+            <img src='https://img.utdstc.com/icon/26e/fb0/26efb07292abf41a489cb9a9ca56230edfa7dcdda7e43cb934e9e0d5c3eb136c:200' width='133' alt='tgc logo'>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img style='width: 26px; margin-right: 13px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; margin-right: 13px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; margin-right: 13px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <table style='display: inline-block;'>
+                <tr>
+                    <td style='color: #666; padding-bottom: 10px; font-size: 12px; font-weight: 600;'>Resources</td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;' width='170'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Support-A-Creator</a>
+                    </td>
+                    <td style='padding-bottom: 10px;' width='150'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Company</a>
+                    </td>
+                    <td style='padding-bottom: 10px;' width='150'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Store EULA</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Publish on Epic Games</a>
+                    </td>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Fan Art Policy</a>
+                    </td>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Online Services</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Careers</a>
+                    </td>
+                    <td>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>UX Research</a>
+                    </td>
+                    <td>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Community Rules</a>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <table style='display: inline-block; padding-top: 26px;'>
+                <tr>
+                    <td style='color: #666; padding-bottom: 10px; font-size: 12px; font-weight: 600;'>Made By Epic Games</td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;' width='150'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Battle Breakers</a>
+                    </td>
+                    <td style='padding-bottom: 10px;' width='150'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Shadow Complex</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Fortnite</a>
+                    </td>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Spyjinx</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Infinity Blade</a>
+                    </td>
+                    <td style='padding-bottom: 10px;'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Unreal Tournament</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style='padding-bottom: 10px;' width='150'>
+                        <a href='#' style='font-size: 12px; margin: 10px 0 0; color: #aaa; text-decoration: none;'>Robo Recall</a>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+<table border='0' cellpadding='0' cellspacing='0' style='width: 900px; table-layout: fixed; max-width: 900px; padding: 8px 78px 24px; margin: 0; font-family: Arial, sans-serif; background: #202020;'>
+    <tr>
+        <td style='padding: 0 0 32px; color: #666; font-size: 12px; font-weight: 600;'>
+            © 2021 TGC  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sed proin orci mi. Risus dolor ullamcorper
+            senectus quam accumsan, tempor, metus. Aliquet eu sed sed viverra neque. Tellus volutpat sed pharetra cursus posuere.
+            Sit quis egestas mi ut tortor erat tellus eu. Scelerisque velit, sit egestas arcu placerat at ut ut. Ipsum congue nunc
+            ipsum ullamcorper fusce sollicitudin velit. Neque sed in eu, laoreet proin sed. Quam nec nunc amet elit amet vulputate
+            nullam sed. Vulputate proin praesent pharetra nibh rhoncus.
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href='#' style='font-size: 12px; padding-right: 10px; color: #aaa; text-decoration: none;'>Terms of Service</a>
+            <a href='#' style='font-size: 12px; padding-right: 10px; color: #aaa; text-decoration: none;'>Privacy Policy</a>
+            <a href='#' style='font-size: 12px; color: #aaa; text-decoration: none;'>Store Refund Policy</a>
+        </td>
+    </tr>
+    <tr>
+        <td style='padding-top: 25px; position: relative;'>
+            <img style='width: 26px; margin-right: 7px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; margin-right: 7px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; margin-right: 7px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; margin-right: 7px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+            <img style='width: 26px; position: absolute; right: 0; top: -20px;' src='https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png' alt='facebook'>
+        </td>
+    </tr>
+</table>
